Misc. integration test cleanup.